Fix user menu alignment

--- a/themes/SuiteP/css/suitep-base/navbar.scss
+++ b/themes/SuiteP/css/suitep-base/navbar.scss
@@ -659,7 +659,8 @@
 }
 
 .globalLinks-desktop .suitepicon-action-caret {
-  line-height: 30px;
+  line-height: 45px;
+  font-size: 0.6em;
 }
 
 .usermenu a .caret {
@@ -686,6 +687,9 @@
 .globalLinks-desktop .suitepicon-action-current-user {
   font-size: $navbar-toolbar-height - 2px;
   font-weight: 400;
+  position: relative;
+  top: 7px;
+  vertical-align: top;
 }
 
 .globalLinks-desktop:hover {
@@ -1742,6 +1746,7 @@
 
   .globalLinks-mobile .suitepicon-action-current-user {
     font-size: $navbar-toolbar-height;
+    line-height: 0;
   }
 
   .navbar-search {
@@ -2059,10 +2064,10 @@
     display: inline-block;
     visibility: visible;
     text-align: right;
-    width: 28%;
+    width: 30%;
     float:right;
     padding-right: 0.5%;
-    margin-top: 6px;
+    margin-top: 4px;
   }
 
   .desktop-toolbar .navbar-brand-container {
@@ -2083,7 +2088,7 @@
   }
 
   .desktop-bar > .toolbar > li > .btn {
-    margin: 0;
+    margin-top: 0.2em;
     height: $navbar-toolbar-height;
     width: $navbar-toolbar-height;
     padding: 0;
@@ -2124,7 +2129,7 @@
   }
 
   .desktop-bar > .toolbar > li.navbar-search.open .dropdown-menu {
-    top: 0;
+    top: 4px;
     right: $navbar-toolbar-height;
     bottom: auto;
     left: auto;
@@ -2349,6 +2354,18 @@
   }
 }
 
+.globallabel-user {
+  max-width: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+  vertical-align: sub;
+  margin-left: 0.2em;
+  margin-right: 0.2em;
+  white-space: nowrap;    
+}
+
+
 @media (min-width: 1561px) {
   .searchform button {
     display: block;
@@ -2369,7 +2386,6 @@
   }
   .desktop-bar {
     width: 39%;
-    padding-top: 4px;
   }
   .navbar-form.searchform .input-group-btn {
     background: $navbar-search-bg;
@@ -2760,3 +2776,5 @@
   }
 
 }
+
+
